src/test/resources/json/invalid_inputs/empty_file.json.except
No content to map due to end-of-input